      - Removed: country and language forcing
      - Added: Widget v6 support.
      - Removed: possibility to change order branch (preparation for future upgrade)
      - Added: associated countries to carriers list
      - Updated: CSV export version upgraded to version 6
      - Added: possibility to pair carriers with carriers to external pickup points and to distinguish between
        Packeta pickup points only and all pickup points
      - Fixed: correctly display the name of the carrier identical to the name of the e-shop on the module setting page
      - Fixed: Undefined index: customer_country in DEV mode
      - Fixed: Upgrade script of version 2.1.3
      - Added: module version to static files
2.1.6 - Fixed: front.js
      - Added: information about pickup point or address delivery carrier into order administration
        and possibility to change pickup point using widget
      - Added: information about chosen pickup point to order confirmation, e-mail and history detail
      - Updated: using native configuration storage (https://devdocs.prestashop.com/1.7/modules/creation/#the-configuration-object )
        and removal of packetery_settings table
      - Added: verifying that the sender indication exists using the senderGetReturnRouting API point
      - Fixed: corrected behavior when changing carrier or address in order administration
      - Added: Packetery classes loaded using autoloader from libs folder
      - Added: export of packet weight to API and CSV when using the kg unit, information for user when using another unit
2.1.7 - Added: proper handling of old broken orders in order administration
      - Removed: imperfect splitting of address to street and house number
      - Added: order is processed correctly when using legacy widget v5
      - Removed: unused fragments of code
      - Fixed: notice during order state update
      - Added: showing carrier extra content for (probably broken) third party templates